--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "three": "^0.171.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
