--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
@@ -18,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.6",
     "three": "^0.171.0",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "babel-loader": "^9.2.1",
     "gh-pages": "^6.2.0"
   }
 }
